--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-material-demo": {
+    "travel-diary-client": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-material-demo",
+            "outputPath": "dist/travel-diary-client",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -58,18 +58,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-material-demo:build"
+            "browserTarget": "travel-diary-client:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-material-demo:build:production"
+              "browserTarget": "travel-diary-client:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-material-demo:build"
+            "browserTarget": "travel-diary-client:build"
           }
         },
         "test": {
@@ -104,7 +104,7 @@
         }
       }
     },
-    "angular-material-demo-e2e": {
+    "travel-diary-client-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -113,11 +113,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-material-demo:serve"
+            "devServerTarget": "travel-diary-client:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-material-demo:serve:production"
+              "devServerTarget": "travel-diary-client:serve:production"
             }
           }
         },
@@ -133,5 +133,5 @@
       }
     }
   },
-  "defaultProject": "angular-material-demo"
+  "defaultProject": "travel-diary-client"
 }
