--- a/package.json
+++ b/package.json
@@ -43,6 +43,13 @@
     "@types/hammerjs": "^2.0.36",
     "@types/node": "~8.9.4",
     "enhanced-resolve": "^4.1.0",
+    "grunt-karma": "^3.0.2",
+    "karma": "^4.1.0",
+    "jasmine-core": "^3.4.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
