Updated testing dependencies.

--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
     "@types/hammerjs": "^2.0.36",
+    "@types/jasmine": "^3.3.13",
     "@types/node": "~8.9.4",
     "enhanced-resolve": "^4.1.0",
     "grunt-karma": "^3.0.2",
-    "karma": "^4.1.0",
     "jasmine-core": "^3.4.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^2.0.1",
