--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,6 +4,9 @@
     "outDir": "../out-tsc/app",
     "types": []
   },
+  "include": [
+    "../src/**/*"
+  ],
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
