Added internationalization (i18n) library @ngx-translate/core
More about library: https://www.npmjs.com/package/@ngx-translate/core

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "angular-material-icons": "^0.7.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
