--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hammerjs": "^2.0.8",
     "material-icons": "^0.3.0",
     "ngx-cookie-service": "^2.1.0",
+    "ngx-webstorage-service": "^4.0.1",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
