--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.9",
+    "@angular/animations": "^8.1.1",
     "@angular/cdk": "^7.3.4",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
+    "@angular/common": "~8.1.1",
+    "@angular/compiler": "~8.1.1",
+    "@angular/core": "~8.1.1",
     "@angular/flex-layout": "^7.0.0-beta.23",
-    "@angular/forms": "~7.1.0",
+    "@angular/forms": "~8.1.1",
     "@angular/material": "^7.3.4",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
+    "@angular/platform-browser": "~8.1.1",
+    "@angular/platform-browser-dynamic": "~8.1.1",
+    "@angular/router": "~8.1.1",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
@@ -37,16 +37,16 @@
     "ngx-cookie-service": "^2.1.0",
     "ngx-webstorage-service": "^4.0.1",
     "path": "^0.12.7",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
-    "typescript": "~3.1.6",
-    "zone.js": "~0.8.26"
+    "typescript": "~3.4.5",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.11.4",
     "@angular/cli": "^7.3.6",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/language-service": "~7.1.0",
+    "@angular/compiler-cli": "~8.1.1",
+    "@angular/language-service": "~8.1.1",
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "^3.3.13",
     "@types/node": "~8.9.4",
@@ -59,8 +59,7 @@
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "tslint": "~5.11.0"
   },
   "engines": {
     "node": "10.13.0",
