Leaflet map library replaced with ngx-leaflet
Leaflet packages is replaced with Leaflet packages for Angular.io (https://github.com/Asymmetrik/ngx-leaflet)

--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,9 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-              "src/assets/leaflet/leaflet.css"
+              "./node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [
-              "src/assets/leaflet/leaflet.js"
             ]
           },
           "configurations": {
