--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "@asymmetrik/ngx-leaflet": "^6.0.1",
     "@cloudinary/angular-5.x": "^1.0.2",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
@@ -36,6 +37,7 @@
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.5.1",
     "material-icons": "^0.3.0",
     "ngx-cookie-service": "^2.1.0",
     "ngx-webstorage-service": "^4.0.1",
@@ -52,6 +54,7 @@
     "@angular/language-service": "~8.1.1",
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "^3.3.13",
+    "@types/leaflet": "^1.5.0",
     "@types/node": "~8.9.4",
     "enhanced-resolve": "^4.1.0",
     "grunt-karma": "^3.0.2",
