--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.5.1",
+    "leaflet-geosearch": "^2.7.0",
     "material-icons": "^0.3.0",
     "ngx-cookie-service": "^2.1.0",
     "ngx-webstorage-service": "^4.0.1",
@@ -55,6 +56,7 @@
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "^3.3.13",
     "@types/leaflet": "^1.5.0",
+    "@types/leaflet-geosearch": "^2.7.1",
     "@types/node": "~8.9.4",
     "enhanced-resolve": "^4.1.0",
     "grunt-karma": "^3.0.2",
